--- a/CustomRPC/UpdatePrompt.cs.resx
+++ b/CustomRPC/UpdatePrompt.cs.resx
@@ -147,6 +147,6 @@ Nejnovější verze:</value>
     <value>Přeskočit tuto verzi</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Je k dispozici aktualizace</value>
+    <value>Je k dispozici nová aktualizace</value>
   </data>
 </root>
