--- a/CustomRPC/About.cs.resx
+++ b/CustomRPC/About.cs.resx
@@ -128,6 +128,6 @@
     <value>Zavřít</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Podobnosti</value>
+    <value>Podrobnosti</value>
   </data>
 </root>
