--- a/CustomRPC/ErrorReportViewer.cs.resx
+++ b/CustomRPC/ErrorReportViewer.cs.resx
@@ -117,13 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="labelInfo.Text" xml:space="preserve">
+    <value>CustomRP se neočekávaně ukončil v předchozí relaci kvůli následující situaci:</value>
+  </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Nahlásit chybu</value>
-  </data>
-  <data name="buttonOK.Text" xml:space="preserve">
-    <value>OK</value>
-  </data>
-  <data name="labelInfo.Text" xml:space="preserve">
-    <value>CustomRP neočekávaně selkal relaci kvůli následující situaci:</value>
   </data>
 </root>
