--- a/CustomRPC/MainForm.cs.resx
+++ b/CustomRPC/MainForm.cs.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="trayIcon.BalloonTipText" xml:space="preserve">
-    <value>Dvou-klik na ikonu pro znovu-zobrazení, nebo klikni pravým pro ukončení.</value>
+    <value>Dvakrát klikni na ikonu pro znovu-zobrazení, nebo klikni pravým pro ukončení.</value>
   </data>
   <data name="trayIcon.BalloonTipTitle" xml:space="preserve">
     <value>Aplikace poběží na pozadí.</value>
@@ -200,7 +200,7 @@
     <value>197, 22</value>
   </data>
   <data name="startMinimizedToolStripMenuItem.Text" xml:space="preserve">
-    <value>Spustit na liště</value>
+    <value>Spustit skrytě</value>
   </data>
   <data name="autoconnectToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>197, 22</value>
@@ -299,7 +299,7 @@
     <value>190, 22</value>
   </data>
   <data name="aboutToolStripMenuItem.Text" xml:space="preserve">
-    <value>Podobnosti...</value>
+    <value>Podrobnosti…</value>
   </data>
   <data name="helpToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>73, 20</value>
@@ -347,7 +347,7 @@
     <value>Druhý řádek v přítomnosti.</value>
   </data>
   <data name="labelSmallKey.ToolTip" xml:space="preserve">
-    <value>Označení assetu pro malý obrázek nebo URL obrázku.</value>
+    <value>Jméno assetu pro malý obrázek nebo URL obrázku.</value>
   </data>
   <data name="labelSmallText.ToolTip" xml:space="preserve">
     <value>Text který se zobrazí při najetí na malý obrázek.</value>
@@ -356,7 +356,7 @@
     <value>Text který se zobrazí při najetí na velký obrázek.</value>
   </data>
   <data name="labelLargeKey.ToolTip" xml:space="preserve">
-    <value>Označení assetu pro velký obrázek nebo URL obrázku.</value>
+    <value>Jméno assetu pro velký obrázek nebo URL obrázku.</value>
   </data>
   <data name="labelSmall.Size" type="System.Drawing.Size, System.Drawing">
     <value>76, 14</value>
@@ -408,7 +408,7 @@
 Časovače stavu mají 24hodinový limit, což znamená, že po 24 hodinách se čas vrátí na 0:00.</value>
   </data>
   <data name="labelParty.ToolTip" xml:space="preserve">
-    <value>Počet hráčů v aktuální skupině, který se zobrazuje vedle pole Stát.
+    <value>Počet hráčů v aktuální skupině, který se zobrazuje vedle pole Status.
 Aby se projevily, obě pole by měla být větší než 0.</value>
   </data>
   <data name="radioButtonCustom.Size" type="System.Drawing.Size, System.Drawing">
@@ -457,7 +457,7 @@ Aby se projevily, obě pole by měla být větší než 0.</value>
     <value>Od poslední aktualizace přítomnosti</value>
   </data>
   <data name="radioButtonPresence.ToolTip" xml:space="preserve">
-    <value>Ukáže kolik času uběhlo od chvíle kdy jsi připojil, nebo aktualizoval přítomnost.</value>
+    <value>Ukáže kolik času uběhlo od chvíle kdy se připojila, nebo aktualizovala přítomnost.</value>
   </data>
   <data name="labelPartyOf.Location" type="System.Drawing.Point, System.Drawing">
     <value>344, 114</value>
