--- a/CustomRPC/Strings.ko.resx
+++ b/CustomRPC/Strings.ko.resx
@@ -140,7 +140,7 @@
     <value>연결 중...</value>
   </data>
   <data name="statusConnectionFailed" xml:space="preserve">
-    <value>연결 실패 (Discord가 실행중입니까?)</value>
+    <value>연결 실패 (Discord가 실행 중인가요?)</value>
   </data>
   <data name="statusDisconnected" xml:space="preserve">
     <value>연결 끊김</value>
