--- a/CustomRPC/Strings.bg.resx
+++ b/CustomRPC/Strings.bg.resx
@@ -181,4 +181,7 @@
   <data name="errorInvalidImageURL" xml:space="preserve">
     <value>Връзката към исображението е твърде дълга!</value>
   </data>
+  <data name="errorStartupShortcut" xml:space="preserve">
+    <value>Провалено да се добави стартиращ пряк път:</value>
+  </data>
 </root>
