--- a/CustomRPC/Strings.it.resx
+++ b/CustomRPC/Strings.it.resx
@@ -181,4 +181,7 @@ Premi Sì per resettare le impostazioni oppure premi No per uscire.</value>
   <data name="errorInvalidImageURL" xml:space="preserve">
     <value>Il link dell'immagine è troppo lungo!</value>
   </data>
+  <data name="errorStartupShortcut" xml:space="preserve">
+    <value>Impossibile aggiungere o rimuovere un collegamento di avvio:</value>
+  </data>
 </root>
