--- a/CustomRPC/ErrorReportViewer.hr.resx
+++ b/CustomRPC/ErrorReportViewer.hr.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,26 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="buttonUpdate.Text" xml:space="preserve">
-    <value>Da</value>
-  </data>
-  <data name="buttonNotNow.Text" xml:space="preserve">
-    <value>Ne Sada</value>
-  </data>
-  <data name="labelQuestion.Text" xml:space="preserve">
-    <value>Želite li preuzeti ovo ažuriranje?</value>
-  </data>
-  <data name="checkBoxNeverNotify.Text" xml:space="preserve">
-    <value>Nemoj više provjeravati ima li ažuriranja</value>
-  </data>
-  <data name="labelVersionsText.Text" xml:space="preserve">
-    <value>Trenutna verzija:
-Najnovija verzija:</value>
-  </data>
-  <data name="buttonSkipUpdate.Text" xml:space="preserve">
-    <value>Preskoči ovu verziju</value>
-  </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Dostupno ažuriranje</value>
+    <value>Izvješće o pogrešci</value>
+  </data>
+  <data name="buttonOK.Text" xml:space="preserve">
+    <value>Ok</value>
+  </data>
+  <data name="labelInfo.Text" xml:space="preserve">
+    <value>CustomRP se srušio u prethodnoj sesiji zbog sljedeće neobrađene iznimke:</value>
   </data>
 </root>
