--- a/CustomRPC/MainForm.el.resx
+++ b/CustomRPC/MainForm.el.resx
@@ -200,7 +200,7 @@
     <value>227, 22</value>
   </data>
   <data name="startMinimizedToolStripMenuItem.Text" xml:space="preserve">
-    <value>Τρέξε Ελαχιστοποιημένο</value>
+    <value>Ξεκίνα Ελαχιστοποιημένο</value>
   </data>
   <data name="autoconnectToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>227, 22</value>
@@ -454,6 +454,24 @@
     <value>28, 14</value>
   </data>
   <data name="labelPartyOf.Text" xml:space="preserve">
-    <value>απο</value>
+    <value>από</value>
+  </data>
+  <data name="labelSmallKey.ToolTip" xml:space="preserve">
+    <value>Όνομα του στοιχείου για μια μικρή εικόνα ή μια διεύθυνση URL εικόνας.</value>
+  </data>
+  <data name="labelLargeKey.ToolTip" xml:space="preserve">
+    <value>Όνομα του στοιχείου για μεγάλη εικόνα ή διεύθυνση URL εικόνας.</value>
+  </data>
+  <data name="darkModeToolStripMenuItem.Text" xml:space="preserve">
+    <value>Σκοτεινό Θέμα</value>
+  </data>
+  <data name="supportersToolStripMenuItem.Text" xml:space="preserve">
+    <value>Υποστηρικτές</value>
+  </data>
+  <data name="radioButtonPresence.Text" xml:space="preserve">
+    <value>Από την τελευταία ενημέρωση παρουσίας</value>
+  </data>
+  <data name="radioButtonPresence.ToolTip" xml:space="preserve">
+    <value>Δείχνει πόσος χρόνος έχει περάσει από την τελευταία φορά που συνδεθήκατε ή ενημερώσατε την παρουσία.</value>
   </data>
 </root>
