Updated de-ch, credited translators and a supporter

--- a/CustomRPC/MainForm.de-CH.resx
+++ b/CustomRPC/MainForm.de-CH.resx
@@ -260,7 +260,7 @@
     <value>41, 20</value>
   </data>
   <data name="helpToolStripMenuItem.Text" xml:space="preserve">
-    <value>Hilfi</value>
+    <value>Hilfe</value>
   </data>
   <data name="openTheManualToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>206, 22</value>
