--- a/CustomRPC/Strings.de-CH.resx
+++ b/CustomRPC/Strings.de-CH.resx
@@ -147,7 +147,7 @@ Du chasch es jederziit öffne mit Hilfe -&gt; Handbuäch öffne oder drück F1.<
     <value>Verbindig geschitert (Discord offä?)</value>
   </data>
   <data name="statusDisconnected" xml:space="preserve">
-    <value>Getränt</value>
+    <value>Tränt</value>
   </data>
   <data name="statusError" xml:space="preserve">
     <value>Verbindigs fehler (Falschi ID?)</value>
