Updated cs (new translator)

--- a/CustomRPC/About.cs.resx
+++ b/CustomRPC/About.cs.resx
@@ -122,7 +122,7 @@
     <value>170, 19</value>
   </data>
   <data name="labelMadeBy.Text" xml:space="preserve">
-    <value>Vytvořil: maximmax42</value>
+    <value>Tvůrce: maximmax42</value>
   </data>
   <data name="buttonClose.Text" xml:space="preserve">
     <value>Zavřít</value>
