Revert "Updated cs (new translator)"
This reverts commit df0d6c0fada2bcae530b16ab5cbf7fefbe3e564e.

--- a/CustomRPC/MainForm.cs.resx
+++ b/CustomRPC/MainForm.cs.resx
@@ -257,19 +257,19 @@
     <value>71, 20</value>
   </data>
   <data name="settingsToolStripMenuItem.Text" xml:space="preserve">
-    <value>Nastaveí</value>
+    <value>Nastavení</value>
   </data>
   <data name="openTheManualToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>190, 22</value>
   </data>
   <data name="openTheManualToolStripMenuItem.Text" xml:space="preserve">
-    <value>Otevřít manuáll</value>
+    <value>Otevřít manuál</value>
   </data>
   <data name="gitHubPageToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>190, 22</value>
   </data>
   <data name="gitHubPageToolStripMenuItem.Text" xml:space="preserve">
-    <value>GitHub strana</value>
+    <value>GitHub Stránka</value>
   </data>
   <data name="toolStripSeparatorHelp1.Size" type="System.Drawing.Size, System.Drawing">
     <value>187, 6</value>
@@ -284,7 +284,7 @@
     <value>190, 22</value>
   </data>
   <data name="translatorsToolStripMenuItem.Text" xml:space="preserve">
-    <value>Páskianen</value>
+    <value>Překladatelé</value>
   </data>
   <data name="toolStripSeparatorHelp2.Size" type="System.Drawing.Size, System.Drawing">
     <value>187, 6</value>
